--- a/index.html
+++ b/index.html
@@ -3,28 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Projects</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" defer></script>
-  <script src="script.js" defer></script>
+  <title>Dark Forest</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <div class="container">
-      <img src="assets/logo.png" alt="Logo" class="logo">
-      <h1>My GitHub Projects</h1>
+  <div class="forest-container">
+    <div class="fog"></div>
+    <div class="title">
+      <h1>Welcome to the Dark Forest</h1>
+      <p>Do you dare to enter?</p>
     </div>
-  </header>
-  
-  <main>
-    <section id="projects" class="projects-container">
-      <h2>Projects</h2>
-      <div id="projects-list"></div>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 <a href="https://github.com/realborko" target="_blank">realborko</a>. All rights reserved.</p>
-  </footer>
+    <div class="animated-text">
+      <span>The trees whisper secrets...</span>
+      <span>The shadows move...</span>
+      <span>You're not alone...</span>
+    </div>
+    <a href="#deeper" class="explore-button">Venture Deeper</a>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
