--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div class="forest-container">
     <div class="fog"></div>
     <div class="title">
-      <h1>Welcome to the Dark Forest</h1>
+      <h1>Welcome...</h1>
       <p>Do you dare to enter?</p>
     </div>
     <div class="animated-text">
-      <span>The trees whisper secrets...</span>
+      <span>The trees whisper</span>
       <span>The shadows move...</span>
       <span>You're not alone...</span>
     </div>
